--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <nav class="site-nav">
                     <ul class="site-nav-list">
                         <li class="site-nav-list-item">
-                            <a href="./boshsahifa.html" class="site-nav-list-item-link">
+                            <a href="./index.html" class="site-nav-list-item-link">
                                 Bosh sahifa
                             </a>
                         <li class="site-nav-list-item">
-                            <a href="./xizmatlar.html" class="site-nav-list-item-link">
+                            <a href="./services.html" class="site-nav-list-item-link">
                                 Xizmatlar
                             </a>
                         <li class="site-nav-list-item">
@@ -33,7 +33,7 @@
                                 Portfolio
                             </a>
                         <li class="site-nav-list-item">
-                            <a href="./jamoa.html" class="site-nav-list-item-link">
+                            <a href="./team.html" class="site-nav-list-item-link">
                                 Jamoa
                             </a>
                         <li class="site-nav-list-item">
@@ -41,12 +41,12 @@
                                 Blog
                             </a>
                         <li class="site-nav-list-item">
-                            <a href="./kontaktlar.html" class="site-nav-list-item-link">
+                            <a href="./contacts.html" class="site-nav-list-item-link">
                                 Kontaktlar
                             </a>
                         </li>
                     </ul>
-                    <a class="div-box-link" href="tell:+998909213711">+998 90 921 37 11</a>
+                    <a class="div-box-link" href="tel:+998909213711">+998 90 921 37 11</a>
                 </nav>
                 <!-- end navigation  -->
             </div>
@@ -69,7 +69,7 @@
                             Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex,
                             eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar
                         </p>
-                        <a class="wrapper-inner-link" href="./xizmatlar.html">
+                        <a class="wrapper-inner-link" href="./services.html">
                             Xizmatlar bilan tanishish
                         </a>
                     </div>
@@ -100,7 +100,7 @@
                     </div>
                     <ul class="service-box-list">
                         <li class="service-box-list-item">
-                            <a class="service-box-list-item-link" href="./vebsayttuzish.html">
+                            <a class="service-box-list-item-link" href="./createwebsite.html">
                                 <h3 class="service-box-list-item-link-heding">
                                     Vebsayt tuzish
                                 </h3>
@@ -130,7 +130,7 @@
                             </a>
                         </li>
                         <li class="service-box-list-item">
-                            <a class="service-box-list-item-link" href="./grafikdizayn.html">
+                            <a class="service-box-list-item-link" href="./graphicdesign.html">
                                 <h3 class="service-box-list-item-link-heding">
                                     Grafik dizayn
                                 </h3>
@@ -140,7 +140,7 @@
                             </a>
                         </li>
                         <li class="service-box-list-item">
-                            <a class="service-box-list-item-link" href="./crmtizimlar.html">
+                            <a class="service-box-list-item-link" href="./crmsystems.html">
                                 <h3 class="service-box-list-item-link-heding">
                                     CRM tizimlar
                                 </h3>
@@ -154,7 +154,7 @@
                         <a class="service-box-inner-link" href="#">
                             Buyurtma berish
                         </a>
-                        <a class="service-box-inner-links" href="./xizmatlarhtml">
+                        <a class="service-box-inner-links" href="./services.html">
                             Xizmatlarsahifasiga o’tish
                         </a>
                     </div>
@@ -261,7 +261,6 @@
             </div>
         </section>
         <!-- order section end -->
-    </main>
     <!-- site main end -->
 
     <!-- site footer start -->
@@ -300,7 +299,7 @@
                 <div class="our-social-wrapper">
                     <strong class="our-social-title">Biz internetda</strong>
                     <ul class="our-social-title-list">
-                        <li class="our-social-title-item">
+                        <li class="our-social-title-item"> 
                             <a class="our-social-title-item-link" href="#">Telegram</a>
                         </li>
                         <li class="our-social-title-item">
